--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,5 +1,6 @@
 streamlit>=1.28.0
 pandas>=1.5.0
-google-api-python-client
-google-auth-httplib2
-google-auth-oauthlib
+google-api-python-client==2.88.0
+google-auth-httplib2==0.1.0  
+google-auth-oauthlib==1.0.0
+requests>=2.28.0
